# complex-sat-asm

./: .gitignore  .gitmodules  README.md  config.template.toml  setup.cfg
BITS/: setup.cfg
BITS/src/util/: __init__.py
assets/: dmel_reference_units.fasta
script/: fasta_to_dazz_db.sh  install_dependencies.sh
src/: __init__.py  main.py  type.py  util.py
src/BITS/clustering/: base.py  seq.py
src/BITS/seq/: align_affine.py  alt_consensus.py  dotplot.py  io.py  kmer.py
src/BITS/util/: scheduler.py
src/datander/: __init__.py  main.py
src/datruf/: __init__.py  core.py  filter.py  filter_reads.py  filter_tr_reads.py  io.py  main.py  qv.py
src/layouter/: __init__.py  contig.py  graph.py
src/overlapper/: __init__.py  align_proper.py  ava_sync.py  ava_unsync.py  filter_overlap.py  read_spectrum.py  split_merge_dpmm.py  split_merge_dpmm_core.py  svs_unsync.py  sync_read.py  type.py
src/simulator/: __init__.py  core.py  edit_script.py  main.py  rand_seq.py  tandem_repeat.py
src/visualizer/: __init__.py  contig.py  graph.py  overlap.py  read.py  read_self.py  read_vs.py  unit.py
src/visualizer/read/: __init__.py  col.py  main.py  plot_self.py  plot_vs.py
tests/: test_type.py
tests/overlapper/: test_svs_unsync.py
