[metadata]
name = CSA
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/complex-sat-asm
description = Complex Satellite Assembler
long_description = file: README.md

[options]
python_requires = ==3.7.*
package_dir =
  csa = src
packages =
  csa
  csa.datander
  csa.datruf
  csa.simulator
  csa.visualizer
install_requires =
  cython
  ipython
  ipykernel
  nbformat
  BITS
dependency_links =
  git+ssh://git@github.com/yoshihikosuzuki/BITS.git#egg=BITS
