[metadata]
name = BITS
version = 0.1
author = Yoshihiko Suzuki
author_email = ys.neoteny@gmail.com
url = https://github.com/yoshihikosuzuki/BITS
description = miscellaneous BioInformatics ToolS
long_description = file: README.md


[options]
package_dir =
  BITS = src
packages =
  BITS
  BITS.clustering
  BITS.seq
  BITS.util
install_requires =
  numpy
  scipy
  sklearn
  logzero
  pyinterval
  biopython
  edlib
